--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
           </div>
           <hr />
           <div class="amount total">
+            <p class="m-0">Discount</p>
+            <input class="discount" type="text" />
+          </div>
+          <div class="amount total mt-4">
             <p>
               The Total amount of <br />
               (Including VAT)
